Inclusão de novos endpoints e funcionalidades de pessoa
