# app/Http/Resources/EnderecoCollection.php
@@ -4,26 +4,9 @@ namespace App\Http\Resources;
 
 use Illuminate\Http\Resources\Json\ResourceCollection;
 
-/**
- * @OA\Schema(
- *     title="PessoaResource",
- *     description="Pessoa resource",
- *     @OA\Xml(
- *         name="PessoaResource"
- *     )
- * )
- */
-class PessoaCollection extends ResourceCollection
+class EnderecoCollection extends ResourceCollection
 {
     /**
-     * @OA\Property(
-     *     title="Data",
-     *     description="Data wrapper",
-     *     property="data"
-     * )
-     *
-     * @var \App\Models\Uf[]
-     *
      *
      * Transform the resource collection into an array.
      *
