# routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\PessoaController;
+use App\Http\Controllers\UfController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -15,6 +16,18 @@ use Illuminate\Support\Facades\Route;
 |
 */
 Route::apiResource('pessoa', PessoaController::class);
+
+Route::apiResource('uf', UfController::class);
+
+Route::apiResource('bairro', UfController::class);
+
+Route::apiResource('municipio', UfController::class);
+
+Route::get('pessoa', [PessoaController::class, 'filter']);
+
+//Route::get('/user/{name:?}', function ($name = null) {
+//    return $name;
+//});
 
 Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
